switched checkboxes to radio btns, fixed typos, fixed spacing issue in specs layout

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
         <p id="intro-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget dui enim. Nam eu feugiat ex. Nullam sed placerat dui, in tempus</p>
         <div class="info-box">
           <p class="subheader">Add Product Protection Plan</p>
-          <div class="checkbox">
-            <input type="checkbox" name="2year">
-            <label for="2year">2-Year Protection Plan* <span class="accent-blue">$105.00</span></label>
-          </div>
-          <div class="checkbox">
-            <input type="checkbox" name="1year">
-            <label for="1year">1-Year Protection Plan* <span class="accent-blue">$60.00</span></label>
-          </div>
+          <form>
+            <div class="radio-btn">
+              <input type="radio" name="protection" id="2year" value="2year">
+              <label for="2year">2-Year Protection Plan* <span class="accent-blue">$105.00</span></label>
+            </div>
+            <div class="radio-btn">
+              <input type="radio" name="protection" id="1year" value="1year">
+              <label for="1year">1-Year Protection Plan* <span class="accent-blue">$60.00</span></label>
+            </div>
+          </form>
           <p>*A $99 deductible applies to all claims.</p>
         </div>
       </div>
@@ -136,9 +138,9 @@
             <div class="block">
               <h2>Body</h2>
               <p class="subheader">Dimensions</p>
-              <p>137 mm x 71mm (5.38 x 2.75 inches)</p>
+              <p>137 mm x 71 mm (5.38 x 2.75 inches)</p>
               <p class="subheader">Weight</p>
-              <p>220 grams (1.2LBs)</p>
+              <p>220 grams (1.2lbs)</p>
             </div>
           </div>
           <div class="column">
